Refactor Guard and Channel parsing.